@@ -169,6 +169,25 @@ PyObject *DateTime_FromPyDateTime(PyObject *obj)
 #endif
 }
 
+PyObject *DateTime_FromPyDate(PyObject *obj)
+{
+#ifdef HAVE_DATETIME
+    PyObject *res;
+    PyObject *str;
+
+    str = PyObject_Str(obj);
+    if (PyErr_Occurred())
+	return NULL;
+
+    res = DateTime_FromString(str);
+    Py_XDECREF(str);
+    return res;
+#else
+    PyErr_SetString(PyExc_TypeError, "python-sybase compiled without support for python datetime");
+    return NULL;
+#endif
+}
+
 static void DateTime_dealloc(DateTimeObj *self)
 {
     SY_LEAK_UNREG(self);
